--- a/roles/develop/tasks/main-Darwin.yml
+++ b/roles/develop/tasks/main-Darwin.yml
@@ -12,5 +12,6 @@
       libtool, autoconf, automake, unzip, cmake,
       fakeroot,
       ncurses, binutils,
+      kubectx,
       u-boot-tools,
     ]
