--- a/playbooks/dev-with-pcaptools.yml
+++ b/playbooks/dev-with-pcaptools.yml
@@ -5,7 +5,8 @@
     apt:
       name: "{{ item }}"
       state: present
-    loop: [ tcpdump, tshark, termshark, wireshark ]
+    # loop: [ tcpdump, tshark, termshark, wireshark ]
+    loop: [ tcpdump, tshark, wireshark ]
     become: yes
     when: ansible_os_family == 'Debian'
   - name: "Install packages (Darwin)"
