--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+certifi = "^2021.5.30"
 
 [tool.poetry.dev-dependencies]
 ansible = "^2.10.6"
