--- a/playbooks/dev-with-rust.yml
+++ b/playbooks/dev-with-rust.yml
@@ -2,7 +2,7 @@
 - hosts: all
   vars:
     _rust_packages: "{{ rust_packages | default(_rust_default_packages) }}"
-    _rust_default_packages: [ rustfmt ]
+    _rust_default_packages: [ 'rustfmt', 'cargo-edit' ]
     _rust_nigtly_packages: [ racer ]
     _user_home: "{{ ansible_env.HOME }}"
   tasks:
