fix: fix dev-with-rust with adding to install stable

--- a/playbooks/dev-with-rust.yml
+++ b/playbooks/dev-with-rust.yml
@@ -20,8 +20,9 @@
     command: "sh /tmp/rustup.sh -y --no-modify-path"
     args:
       creates: "{{ _user_home }}/.cargo/bin/rustup"
-  - name: Install nightly toolchain
-    command: "{{ _user_home }}/.cargo/bin/rustup install nightly"
+  - name: Install current toolchain
+    command: "{{ _user_home }}/.cargo/bin/rustup install {{ item }}"
+    loop: [ nightly, stable ]
   - name: Set restup default stable
     command: "{{ _user_home }}/.cargo/bin/rustup default stable"
   - name: Set component add rust-src
