--- a/playbooks/basic-devtools.yml
+++ b/playbooks/basic-devtools.yml
@@ -2,16 +2,6 @@
 - hosts: all
   vars:
     _vim_dir: "{{ ansible_env.HOME }}/local"
-    _tmux_dir: "{{ ansible_env.HOME }}/local"
-    _tmux_xpane_dir: "{{ ansible_env.HOME }}/local"
-    _tmux_version: 3.1
-    tmux_dependent_apt_pkgs:
-      '16': [ "libevent-2.0-5", "libevent-dev", "libutf8proc1", "libutf8proc-dev" ]
-      '18': [ "libevent-2.1-6", "libevent-dev", "libutf8proc2", "libutf8proc-dev" ]
-      '20': [
-        "libevent-2.1-7", "libevent-dev", "libutf8proc2", "libutf8proc-dev",
-        "libevent-dev", "ncurses-dev", "build-essential", "bison", "pkg-config"
-      ]
     vim_dependent_pkgs:
       '20': [ lua5.3, libtolua-dev, luajit, libluajit-5.1-dev, luarocks ]
       '21': [ lua5.4, libtolua-dev, luajit, libluajit-5.1-dev, luarocks ]
@@ -26,31 +16,6 @@
       "{{ _vim_dir }}/bin",
       "{{ _vim_dir }}/lib"
     ]
-  - name: install neovim
-    github_asset:
-      repository: "neovim/neovim"
-      asset_name: "nvim-linux64.tar.gz"
-      tag: "v0.6.1"
-      dest: "/tmp/"
-    when: ansible_system == 'Linux'
-  - name: install neovim| downlaod asset
-    unarchive:
-      src: "/tmp/nvim-linux64.tar.gz"
-      dest: "{{ ansible_env.HOME }}/local"
-      remote_src: yes
-    when: ansible_system == 'Linux'
-  - name: install neovim| rename dir
-    copy:
-      src: "{{ ansible_env.HOME }}/local/nvim-linux64/{{ item }}"
-      dest: "{{ ansible_env.HOME }}/local/nvim"
-      remote_src: yes
-    loop: ["bin", "share"]
-    when: ansible_system == 'Linux'
-  - name: install neovim| remove tmp dir
-    file:
-      path: "{{ ansible_env.HOME }}/local/nvim-linux64"
-      state: absent
-    when: ansible_system == 'Linux'
     # - name: Install lua apt libraries for Ubuntu (used by Vim)
     #   apt:
     #     name: "{{ item }}"
@@ -89,29 +54,7 @@
     #   args:
     #     chdir: /tmp/vim.git
     #     creates: '{{ _vim_dir }}/bin/vim'
-  - name: fetch tmux-xpanes
-    get_url:
-      url: https://raw.githubusercontent.com/greymd/tmux-xpanes/master/bin/xpanes
-      dest: /tmp/xpanes
-    when: ansible_system == 'Linux'
-  - name: install tmux-xpanes
-    shell: |
-      install -m 0755 xpanes {{ _tmux_xpane_dir }}/bin/xpanes
-      echo "Ref: https://github.com/greymd/tmux-xpanes"
-    args:
-      chdir: /tmp/
-    when: ansible_system == 'Linux'
-  - name: Install support tools
-    apt:
-      name: "{{ item }}"
-    # loop: [ peco, direnv, fzf, tmux, tmuxinator, bat, jq, vim, exuberant-ctags, global ]
-    loop: [ curl, peco, direnv, fzf, tmux, tmuxinator, jq, vim, exuberant-ctags, global ]
-    # when: ansible_distribution == 'Ubuntu'
-    when: ansible_os_family == 'Debian'
-    become: yes
-  - name: Install support tools
-    homebrew:
-      name: "{{ item }}"
-    loop: [ curl, peco, direnv, fzf, tmux, tmuxinator, tmux-xpanes, bat, jq, vim, ctags, global ]
-    when: ansible_system == 'Darwin'
-  # TODO: Add docker with flag
+  roles:
+    - ansible_appliable
+    - neovim
+    - dev_utils
