--- a/playbooks/basic-locale.yml
+++ b/playbooks/basic-locale.yml
@@ -1,20 +1,4 @@
 ---
 - hosts: all
-  tasks:
-  - name: "Activate locales"
-    become: yes
-    when: ansible_os_family == 'Debian'
-    block:
-      - name: "Install locales packages"
-        apt:
-          name: "{{ item }}"
-          state: present
-        loop: [ locales ]
-      - name: "Activate locales"
-        replace:
-          path: "/etc/locale.gen"
-          regexp: '^#\s+({{ item }}\s+.*)$'
-          replace: '\g<1>'
-        loop: [ "ja_JP.UTF-8" ]
-      - name: locale-gen
-        shell: locale-gen
+  roles:
+    - setup_locale
