refactor: arrange xdp,jvm

--- a/playbooks/dev-for-jvm.yml
+++ b/playbooks/dev-for-jvm.yml
@@ -1,28 +1,4 @@
 ---
 - hosts: all
-  vars:
-    _sdkman_default_sdks: [ "java", "kotlin", "gradle", "groovy" ]
-    _sdkman_sdks: "{{ sdkman_sdks | default(_sdkman_default_sdks) }}"
-    _user_home: "{{ ansible_env.HOME }}"
-  tasks:
-  - name: Install depended package
-    apt:
-      name: zip
-      update_cache: yes
-    become: yes
-  - name: Fetch sdkman installer
-    get_url:
-      url: "https://get.sdkman.io"
-      dest: "/tmp/sdkman_installer.sh"
-      mode: 0755
-  - name: Install sdkman
-    shell: "/tmp/sdkman_installer.sh"
-    args:
-      creates: "{{ _user_home }}/.sdkman/bin/sdkman-init.sh"
-  - name: Install SDKs
-    shell: |
-      . "{{ _user_home }}/.sdkman/bin/sdkman-init.sh"
-      sdk install {{ item }}
-    args:
-      executable: /bin/bash
-    loop: "{{ _sdkman_sdks }}"
+  roles:
+    - devcore_jvm
