--- a/playbooks/dev-for-xdp.yml
+++ b/playbooks/dev-for-xdp.yml
@@ -1,10 +1,4 @@
 ---
 - hosts: all
-  tasks:
-  - name: "Install packages (Debian)"
-    apt:
-      name: "{{ item }}"
-      state: present
-    loop: [ libpcap0.8, libpcap-dev, "linux-tools-{{ ansible_kernel }}", trace-cmd, kernelshark, traceshark ]
-    become: yes
-    when: ansible_os_family == 'Debian'
+  roles:
+    - devcore_xdp
