refactor: mk pkgs

--- a/playbooks/dev-with-rust.yml
+++ b/playbooks/dev-with-rust.yml
@@ -1,39 +1,4 @@
 ---
 - hosts: all
-  vars:
-    _rust_packages: "{{ rust_packages | default(_rust_default_packages + _rust_wasm_packages) }}"
-    _rust_default_packages: [
-      'rustfmt', 'cargo-edit', 'cargo-generate',
-      'cargo-outdated', 'cargo-release', 'cargo-watch',
-      'cargo-audit', 'cargo-crev',
-    ]
-    _rust_wasm_packages: [ 'wasm-pack' ]
-    _rust_nigtly_packages: [ racer ]
-    _user_home: "{{ ansible_env.HOME }}"
-  tasks:
-  - name: Get rustup.sh
-    get_url:
-      url: https://sh.rustup.rs
-      dest: /tmp/rustup.sh
-      mode: 0755
-  - name: Install rustup
-    command: "sh /tmp/rustup.sh -y --no-modify-path"
-    args:
-      creates: "{{ _user_home }}/.cargo/bin/rustup"
-  - name: Install current toolchain
-    command: "{{ _user_home }}/.cargo/bin/rustup install {{ item }}"
-    loop: [ nightly, stable ]
-  - name: Set restup default stable
-    command: "{{ _user_home }}/.cargo/bin/rustup default stable"
-  - name: Set component add rust-src
-    shell: "{{ _user_home }}/.cargo/bin/rustup component add rust-src"
-  - name: Insstall nighly packages
-    command: "{{ _user_home }}/.cargo/bin/cargo +nightly install {{ item }}"
-    args:
-      creates: '{{ _user_home }}/.cargo/bin/{{ item }}'
-    loop: "{{ _rust_nigtly_packages }}"
-  - name: Install rust tools
-    command: "{{ _user_home }}/.cargo/bin/cargo install {{ item }}"
-    args:
-      creates: '{{ _user_home }}/.cargo/bin/{{ item }}'
-    loop: "{{ _rust_packages }}"
+  roles:
+    - devcore_rust
