--- a/playbooks/dev-with-go.yml
+++ b/playbooks/dev-with-go.yml
@@ -1,66 +1,6 @@
 ---
 - hosts: all
-  vars:
-    _user_home: "{{ ansible_env.HOME }}"
-    _go_boot_version: "{{ go_boot_version | default('1.8.3') }}"
-    _go_boot_root: "{{ _user_home }}/go{{ _go_boot_version }}"
-    _go_target_arch: "{{ go_target_arch | default('linux-amd64') }}"
-    _goroot: "{{ _user_home }}/go"
-    _go_version: "{{ go_version | default('1.18') }}"
-    _gopath: "{{ _user_home }}/dev"
-  tasks:
-  - name: "Make directories for '~/dev' as $GOPATH"
-    file:
-      path: "{{ path }}"
-      state: directory
-    vars:
-      path:
-      - "{{ _gopath }}"
-      - "{{ _gopath }}/bin"
-      - "{{ _gopath }}/src"
-  - name: "Create bootstrap go dir (v{{ _go_boot_version }})"
-    file:
-      path: "{{ _go_boot_root }}"
-      state: directory
-  - name: Deploy bootstrap Go
-    shell: |
-      wget -O - https://storage.googleapis.com/golang/go{{ _go_boot_version }}.{{ _go_target_arch }}.tar.gz \
-        | tar -zxvf - --directory={{ _go_boot_root }} --strip-components 1
-    args:
-      creates: '{{ _go_boot_root }}/bin/go'
-  - name: Prepare to install Go
-    git:
-      repo: https://go.googlesource.com/go
-      dest: "{{ _goroot }}"
-      version: "go{{ _go_version }}"
-    register: go_prepare
-  - name: debug message
-    ansible.builtin.debug:
-      var: go_prepare
-  - name: remove_old_version
-    file:
-      path: "{{ _goroot }}/bin/go"
-      state: absent
-    when: go_prepare.changed
-  - name: Install Go
-    shell: . ./all.bash
-    environment:
-      GOROOT: "{{ _goroot }}"
-    environment:
-      GOROOT_BOOTSTRAP: "{{ _go_boot_root }}"
-    args:
-      chdir: "{{ _goroot }}/src"
-      creates: "{{ _goroot }}/bin/go"
-  - name: Install Go tools
-    shell: "{{ _goroot }}/bin/go install {{ item }}"
-    environment:
-      GOPATH: "{{ _gopath }}"
-    loop:
-    - "github.com/goreleaser/goreleaser@latest"
-    - "github.com/google/ko@latest"
-    - "github.com/nektos/act@latest"
-    - "github.com/kyoh86/richgo@latest"
-    - "github.com/go-delve/delve/cmd/dlv@latest"
-    - "github.com/xo/xo@latest"
-    - "github.com/x-motemen/ghq@latest" # TODO move to basic-devtools
-    - "github.com/ktr0731/evans@latest"
+  roles:
+    - devcore_go
+    - with_grpc
+    - with_github_actions
