--- a/playbooks/dev-with-python3.yml
+++ b/playbooks/dev-with-python3.yml
@@ -1,29 +1,4 @@
 ---
 - hosts: all
-  vars:
-    _python_pkgs: "{{ python_pkgs | default(_python_default_pkgs) }}"
-    _python_default_pkgs: [ python3-pip, python3-dev ]
-    _pip_pkgs: [
-      cookiecutter,
-      mypy, pep8, pyflakes3k, pylint,
-      setuptools, wheel, twine,
-      virtualenv, virtualenvwrapper,
-      pipenv, pip-review,
-    ]
-  tasks:
-  - name: Install Python3
-    apt:
-      name: "{{ item }}"
-      state: present
-    loop: "{{ _python_pkgs }}"
-    become: yes
-  - name: Install pip3 packages
-    pip:
-      name: "{{ item }}"
-      executable: pip3
-    loop: "{{ _pip_pkgs }}"
-  - name: Install poetry with recomended process
-    shell: |
-      curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | \
-      python3 /dev/stdin --yes --no-modify-path
-
+  roles:
+    - devcore_python3
