--- a/playbooks/dev-with-ts.yml
+++ b/playbooks/dev-with-ts.yml
@@ -1,25 +1,4 @@
 ---
 - hosts: all
-  vars:
-    _user_home: "{{ ansible_env.HOME }}"
-    nodejs_versions: [ "16.14.0", "17.7.0" ]
-    nodejs_used_version: "16.14.0"
-    deno_version: "1.19.3"
-  tasks:
-  - name: install nodebrew
-    shell: |
-      curl -L git.io/nodebrew | perl - setup
-    args:
-      creates: "{{ _user_home }}/.nodebrew/current/bin/nodebrew"
-  - name: install nodejs
-    shell: |
-      {{ _user_home }}/.nodebrew/current/bin/nodebrew install {{ item }} | cat
-    with_items: "{{ nodejs_versions }}"
-  - name: install nodejs
-    shell: |
-      {{ _user_home }}/.nodebrew/current/bin/nodebrew use v{{ nodejs_used_version }} | cat
-
-  - name: install deno
-    shell: |
-      curl -fsSL https://deno.land/x/install/install.sh | sh /dev/stdin "v{{ deno_version }}"
-
+  roles:
+    - devcore_typescript
