--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = ./hosts.vm
-roles_path = ./roles:~/.ansible/roles
+roles_path = ~/.ansible/roles:./roles
 host_key_checking = False
 interpreter_python=python3
