--- a/playbooks/basic-x11.yml
+++ b/playbooks/basic-x11.yml
@@ -1,27 +1,4 @@
 ---
 - hosts: all
-  tasks:
-  - name: "Activate locales"
-    become: yes
-    when: ansible_os_family == 'Debian'
-    block:
-      - name: "Install X11 packages"
-        apt:
-          name: "{{ item }}"
-          state: present
-        loop: [ xserver-xorg, x11-apps ]
-      - name: "Activate X11Forwarding"
-        replace:
-          path: "/etc/ssh/sshd_config"
-          regexp: '^#\s+({{ item }}\s+.*)$'
-          replace: '\g<1>'
-        loop: [ 'X11Forwarding\s+yes', 'X11DisplayOffset\s+10', 'X11UseLocalhost\s+no' ]
-        notify:
-        - restart_sshd
-  handlers:
-  - name: restart_sshd
-    service:
-      name: ssh
-      state: restarted
-    async: 1
-    become: true
+  roles:
+    - common_x11
