--- a/roles/with_grpc/tasks/main.yml
+++ b/roles/with_grpc/tasks/main.yml
@@ -5,3 +5,8 @@
     GOPATH: "{{ devcore_go_gopath }}"
   loop:
   - "github.com/ktr0731/evans@latest"
+  - "google.golang.org/protobuf/cmd/protoc-gen-go@latest"
+  - "google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest"
+  - "github.com/mwitkow/go-proto-validators/protoc-gen-govalidators@latest"
+  - "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@latest"
+  - "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2"
