--- a/roles/devcore_python3/tasks/install-pkgs.yml
+++ b/roles/devcore_python3/tasks/install-pkgs.yml
@@ -6,5 +6,5 @@
   loop: "{{ devcore_python3_pip_pkgs }}"
 - name: Install poetry with recomended process
   shell: |
-    curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | \
-    python3 /dev/stdin --yes --no-modify-path
+    curl -sSL https://install.python-poetry.org | \
+    python3 /dev/stdin -y
