--- a/roles/with_grpc/tasks/main.yml
+++ b/roles/with_grpc/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
-- name:
-  shell: "{{ devcore_go_goroot }}/bin/go install {{ item }}"
-  environment:
-    GOPATH: "{{ devcore_go_gopath }}"
+- name: install favarit favorite tools
+  ansible.builtin.include_role:
+    name: cmd_install
+    tasks_from: goinstall
   loop:
   - "github.com/ktr0731/evans@latest"
   - "google.golang.org/protobuf/cmd/protoc-gen-go@latest"
   - "google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest"
   - "github.com/mwitkow/go-proto-validators/protoc-gen-govalidators@latest"
   - "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@latest"
-  - "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2"
+  - "github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@latest"
